--- a/api-culinaria-ponto-extra/package.json
+++ b/api-culinaria-ponto-extra/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.5",
     "sequelize": "^6.37.7"
